--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cbnits.interview.graphql.coutries_app.cbnits_graphql">
+
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="Countriezz"
         android:name="${applicationName}"
